--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="http://fonts.cdnfonts.com/css/din-condensed" rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/din-condensed"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
